Bug 450206 - All options in screen sharing dialogue greyed on wayland when trying to share screen with 'gnome-network-displays'
Summary: All options in screen sharing dialogue greyed on wayland when trying to share...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-14 11:58 UTC by bobderbauer
Modified: 2022-02-14 14:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.24.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bobderbauer 2022-02-14 11:58:32 UTC
SUMMARY
I have a fresh Fedora 35 KDE Spin install and updated the complete system. I installed the gnome-network-displays package from the Fedora repos. Running it from the terminal with the debug messages enabled it never shows an error message, but I can't select any window or screen.
In:
https://gitlab.gnome.org/GNOME/gnome-network-displays/-/issues/235
the culprit was decided to most likely be the `xdg-desktop-portal-kde` dialogue itself and not within `gnome-network-displays`

STEPS TO REPRODUCE
1. Install any Linux distribution with KDE Plasma as the desktop (so far with a version of <5.24)
2. Use the wayland session of said desktop
3. Install `gnome-network-displays` either via available repos or build it from source (https://gitlab.gnome.org/GNOME/gnome-network-displays/)
4. Open `gnome-network-displays`
5. Look at the screen sharing select screen

OBSERVED RESULT
A screen selection dialogue pops up and shows available wireless displays. A dialogue opens with two tabs (Screens and Applications) with all options greyed out.

EXPECTED RESULT
A screen selection dialogue pops up and shows available wireless displays. A dialogue opens with only the Screens tab and I can select a screen to stream

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 35: linux-surface 5.16.8 / 5.23.xx
(available in About System)
KDE Plasma Version: 5.23.xx
KDE Frameworks Version: newest available in fedora repos as of time of writing
Qt Version: newest available in fedora repos as of time of writing

ADDITIONAL INFORMATION
I'm currently not able to access the device in question so I cannot guarantee any more precise info. As soon as I get access to it again I will update this bug report
Comment 1 Bug Janitor Service 2022-02-14 14:18:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/72
Comment 2 Nicolas Fella 2022-02-14 14:58:02 UTC
Git commit 2ba5e31aeddb3746f0915763e8e08e7dd8609213 by Nicolas Fella.
Committed on 14/02/2022 at 14:17.
Pushed by nicolasfella into branch 'master'.

[screencast] Fall back to monitor if no type is given

Otherwise we either 1) hit an assert or 2) don't enable any types

The spec says types defaults to monitor

M  +4    -0    src/session.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/2ba5e31aeddb3746f0915763e8e08e7dd8609213
Comment 3 Nicolas Fella 2022-02-14 14:58:50 UTC
Git commit b46f565e3fe8405ef7dbdb684ebb18a4b6f5fe19 by Nicolas Fella.
Committed on 14/02/2022 at 14:58.
Pushed by nicolasfella into branch 'Plasma/5.24'.

[screencast] Fall back to monitor if no type is given

Otherwise we either 1) hit an assert or 2) don't enable any types

The spec says types defaults to monitor
(cherry picked from commit 2ba5e31aeddb3746f0915763e8e08e7dd8609213)

M  +4    -0    src/session.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/b46f565e3fe8405ef7dbdb684ebb18a4b6f5fe19