[screencast] Fall back to monitor if no type is given

Otherwise we either 1) hit an assert or 2) don't enable any types

The spec says types defaults to monitor

BUG: 450206
(cherry picked from commit 2ba5e31aeddb3746f0915763e8e08e7dd8609213)